# ZeroAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
zeroapi/: main.py
zeroapi/api/v1_1/: __init__.py  auth.py  notes.py  users.py
zeroapi/api/v2_1/: __init__.py  auth.py  notes.py
zeroapi/config/: db.py  env.py
zeroapi/enums/: roles.py
zeroapi/middlewares/: auth.py
zeroapi/models/: users.py
zeroapi/models/database/: notes.py  users.py
zeroapi/models/pydantic/: notes.py  requests.py  users.py
zeroapi/services/: notes.py  user.py
