[tool.poetry]
name = "zeroapi"
version = "0.1.0"
description = ""
authors = ["YAndrii27 <AndriiYashchishen@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
