[tool.poetry]
name = "zeroapi"
version = "0.1.0"
description = ""
authors = ["YAndrii27 <AndriiYashchishen@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
sqlalchemy = "^2.0.20"
uvicorn = "^0.23.2"
envparse = "^0.2.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
